--- a/contents/etc/nginx/conf.d/default.conf
+++ b/contents/etc/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
     listen  80;
 
-    root /var/www/html;
+    root /var/www/html/public;
     index index.html index.htm index.php;
 
     # Make site accessible from http://set-ip-address.xip.io
